March 2023 update: new JSON framework, and crypto spec 1.1.5 update. Initial commit; WIP

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "sample": "ts-node --files sample/sample.ts",
+    "samples": "ts-node --files samples/samples.ts",
     "test": "jest --silent"
   },
   "author": "Christian Paquin",
