--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ node_modules/
 # compiled js files
 js/*
 crypto/configureECC.js
+
+# sample files
+samples/upjf/js/
+samples/upjf/node_modules/
+samples/upjf/private/ip.key
+samples/upjf/public/.well-known/jwks.json
+
+
