--- a/package.json
+++ b/package.json
@@ -8,21 +8,25 @@
   },
   "scripts": {
     "build": "tsc",
-    "samples": "ts-node samples/samples.ts",
-    "test0": "jest --silent",
+    "clean": "rm -rf js",
+    "samples": "node js/src/samples/samples.js",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --no-cache"
   },
   "author": "Christian Paquin",
   "license": "MIT",
   "dependencies": {
-    "@microsoft/msrcrypto": "github:microsoft/MSR-JavaScript-Crypto#export-math-lib",
-    "jest": "^29.1.2",
-    "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1"
+    "@microsoft/msrcrypto": "github:microsoft/MSR-JavaScript-Crypto#export-math-lib"
   },
   "devDependencies": {
     "@types/jest": "^29.1.2",
-    "jest-ts-webcompat-resolver": "^1.0.0"
+    "@types/node": "^18.14.1",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "eslint": "^8.34.0",
+    "jest": "^29.1.2"
   },
-  "type": "module"
+  "type": "module",
+  "jest": {
+    "testRegex": "/js/tests/.*\\.js$"
+  }
 }
