--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,10 +4,10 @@
         /* Visit https://aka.ms/tsconfig.json to read more about this file */
         /* Basic Options */
         // "incremental": true,                   /* Enable incremental compilation */
-        "target": "ES2021"                        /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */,
-        "module": "ESNext"                        /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
+        "target": "ES2020"                        /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */,
+        "module": "NodeNext"                      /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
         "lib": [
-            "ES2021"
+            "ES2020"
         ],                                        /* Specify library files to be included in the compilation. */
         // "allowJs": true,                       /* Allow javascript files to be compiled. */
         // "checkJs": true,                       /* Report errors in .js files. */
@@ -41,7 +41,7 @@
         // "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
         // "noUncheckedIndexedAccess": true,      /* Include 'undefined' in index signature results */
         /* Module Resolution Options */
-        "moduleResolution": "nodenext",             /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
+        "moduleResolution": "node16",             /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
         // "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
         // "paths": {},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
         // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
@@ -62,9 +62,5 @@
         /* Advanced Options */
         "skipLibCheck": true                      /* Skip type checking of declaration files. */,
         "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
-    },
-    "ts-node": {
-        "esm": true                                 /* run ts-node in esm mode */,
-        "transpileOnly": true,
     }
 }
