--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
     "extends" : "./tsconfig.base.json",
     "compilerOptions": {
-        "outDir": "js",
-        "rootDir": "."
+        "outDir": "js"
     },
     "include": [
         "src/**/*.ts",
