--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     },
     "include": [
         "src/**/*.ts",
-        "tests/**/*.ts"
+        "tests/**/*.ts",
+        "samples/*.ts"
     ]
 }
