--- a/samples/upjf/src/settings.json
+++ b/samples/upjf/src/settings.json
@@ -1,5 +1,9 @@
 {
     "ISSUER_PORT": "8080",
     "ISSUER_URL": "http://localhost:8080",
-    "IP_SUFFIX": "/.well-known/jwks.json"
+    "ISSUANCE_SUFFIX": "/issue",
+    "JWKS_SUFFIX": "/.well-known/jwks.json",
+    "VERIFIER_PORT": "8081",
+    "VERIFIER_URL": "http://localhost:8081",
+    "PRESENTATION_SUFFIX": "/verify"
 }
