--- a/samples/upjf/package.json
+++ b/samples/upjf/package.json
@@ -14,9 +14,7 @@
     "commander": "^10.0.0",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
-    "got": "^12.5.3",
-    "jose": "^4.12.0",
-    "ts-node": "^10.9.1"
+    "got": "^12.5.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17"
