Added another branch to CI

--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -2,9 +2,13 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - 'main'
+      - 'march2023'
   pull_request:
-    branches: [ main ]
+    branches:
+      - 'main'
+      - 'march2023'
 
 jobs:
   build:
