--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "uprove-node-reference",
   "version": "1.0.0",
   "description": "U-Prove node reference implementation",
-  "main": "src/uprove.ts",
+   "main": "js/src/index.js",
+  "types": "js/src/index.d.ts",  
   "directories": {
     "doc": "doc"
   },
