--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,10 +4,10 @@
         /* Visit https://aka.ms/tsconfig.json to read more about this file */
         /* Basic Options */
         // "incremental": true,                   /* Enable incremental compilation */
-        "target": "ES2020"                        /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */,
-        "module": "NodeNext"                      /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
+        "target": "es2017"                        /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */,
+        "module": "nodenext"                      /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
         "lib": [
-            "ES2020"
+            "ES2020", "DOM"
         ],                                        /* Specify library files to be included in the compilation. */
         // "allowJs": true,                       /* Allow javascript files to be compiled. */
         // "checkJs": true,                       /* Report errors in .js files. */
@@ -17,7 +17,7 @@
         "sourceMap": true,                        /* Generates corresponding '.map' file. */
         // "outFile": "./",                       /* Concatenate and emit output to single file. */
         // "outDir": "js",                        /* Redirect output structure to the directory. */
-        // "rootDir": ".",                           /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+        // "rootDir": ".",                        /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
         // "composite": true,                     /* Enable project compilation */
         // "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
         // "removeComments": true,                /* Do not emit comments to output. */
