--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "uprove-node-reference",
   "version": "1.0.0",
   "description": "U-Prove node reference implementation",
+  "author": "Christian Paquin",
+  "license": "MIT",
+  "type": "module",
   "main": "js/src/index.js",
   "module": "js/src/index.js",
   "browser": "browser/index.js",
@@ -11,6 +14,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "build:watch": "tsc --watch",
     "build:browser": "rollup -c",
     "build:npm": "tsc -p tsconfig.npm.json && npm run build:browser",
     "clean": "rimraf js browser types 'src/*.{js,d.ts,map}'",
@@ -18,8 +22,6 @@
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --verbose",
     "prepare": "npm run build:npm"
   },
-  "author": "Christian Paquin",
-  "license": "MIT",
   "dependencies": {
     "@microsoft/msrcrypto": "github:microsoft/MSR-JavaScript-Crypto#export-math-lib"
   },
@@ -35,9 +37,9 @@
     "eslint": "^8.45.0",
     "jest": "^29.6.1",
     "rollup": "^3.26.2",
-    "rollup-plugin-typescript2": "^0.35.0"
+    "rollup-plugin-typescript2": "^0.35.0",
+    "typescript": "^5.1.6"
   },
-  "type": "module",
   "jest": {
     "testRegex": "/js/tests/.*\\.js$",
     "transform": {},
